--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 GOOGLE_API_KEY=your_api_key
 UNSPLASH_ACCESS_KEY=your_access_key
+GOOGLE_CX=google_search_engine_ID
+GOOGLE_SEARCH_API_KEY=your_google_search_api_key
+USER_EMAIL=target_email_address
