--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pdf-generator",
+  "name": "document-generator",
   "version": "1.0.0",
-  "description": "A PDF generation tool using PDFKit and Google Generative AI",
-  "main": "index.js",
+  "description": "A document generation tool using PDFKit, Google Slides API, and AI-generated content.",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -15,7 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "pdfkit": "^0.16.0",
-    "pptxgenjs": "^3.12.0"
+    "pptxgenjs": "^3.12.0",
+    "sharp": "^0.32.0",
+    "googleapis": "^118.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
